// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generated files require plugin, include plugin inline, and export original handler 1`] = `
"const iopipe = require('iopipe')({\\"token\\":\\"test-token\\"});

exports['simple'] = function attemptSimple(event, context, callback) {
  try {
    return iopipe((evt, ctx, cb) => {
      return require('../handlers/simple').handler(evt, ctx, cb);
    })(event, context, callback);
  } catch (err) {
    throw err;
  }
};
"
`;

exports[`Generated files require plugin, include plugin inline, and export original handler 2`] = `
"const iopipe = require('iopipe')({\\"token\\":\\"test-token\\"});

exports['nameMismatch'] = function attemptNameMismatch(event, context, callback) {
  try {
    return iopipe((evt, ctx, cb) => {
      return require('../handlers/differentName').wow(evt, ctx, cb);
    })(event, context, callback);
  } catch (err) {
    throw err;
  }
};
"
`;

exports[`Generated files require plugin, include plugin inline, and export original handler 3`] = `
"const iopipe = require('iopipe')({\\"token\\":\\"test-token\\"});

exports['syntaxError'] = function attemptSyntaxError(event, context, callback) {
  try {
    return iopipe((evt, ctx, cb) => {
      return require('../handlers/syntaxError').handler(evt, ctx, cb);
    })(event, context, callback);
  } catch (err) {
    throw err;
  }
};
"
`;
